force-app/main/default/objects/Deadline__c/Deadline__c.object-meta.xml
<CustomObject>
    <label>Deadline</label>
    <nameField>
        <label>Deadline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deadlines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>