force-app/main/default/objects/Deadline__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Dedupe Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>