force-app/main/default/objects/Deadline__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Deadlines</relationshipLabel>
    <relationshipName>Deadlines</relationshipName>
    <type>Lookup</type>
</CustomField>