force-app/main/default/objects/Deadline__c/fields/Immigration_Case__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immigration Case</label>
    <referenceTo>Immigration_Case__c</referenceTo>
    <relationshipLabel>Deadlines</relationshipLabel>
    <relationshipName>Deadlines</relationshipName>
    <type>Lookup</type>
</CustomField>