force-app/main/default/objects/Deadline__c/fields/Last_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent__c</fullName>
    <label>Reminder Sent At</label>
    <type>Date</type>
</CustomField>