force-app/main/default/objects/Deadline__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Derived — Document Expiry</fullName>
            </value>
            <value>
                <fullName>Derived — RFE</fullName>
            </value>
            <value>
                <fullName>Derived — Processing Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>